--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,12 @@
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
+    "@sentry/node": "5.15.4",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.3",
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-handlebars": "^4.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
@@ -23,6 +25,7 @@
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.5",
     "sequelize-cli": "^5.5.1",
+    "youch": "^2.0.10",
     "yup": "^0.28.3"
   },
   "devDependencies": {
