--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,9 @@
 		"styled-components": "^5.1.0"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"start": "react-app-rewired start",
+		"build": "react-app-rewired build",
+		"test": "react-app-rewired test",
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
@@ -38,8 +38,8 @@
 	},
 	"devDependencies": {
 		"babel-eslint": "^10.0.3",
-		"babel-plugin-root-import": "^6.4.1",
-		"customize-cra": "^0.8.0",
+		"babel-plugin-root-import": "^6.5.0",
+		"customize-cra": "^0.9.1",
 		"eslint": "^6.6.0",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-prettier": "^6.5.0",
